--- a/index.html
+++ b/index.html
@@ -5,96 +5,106 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!--Шапка страницы-->
-   <header>
-    <nav>
-       <a href="/"> <span lang="en">WebStudio</span></span></a>
+    <!---------Шапка страницы---------->
+
+   <header class="header">
+    <nav class="header-nav">
+       <a class="link header-logo" href="/"><span lang="en"><span class="web">Web</span><span class="studio">Studio</span></span></a>
        <ul class="site-nav list" >
-           <li><a href="">Студия</a></li>
-           <li><a href="">Портфолио</a></li>
-           <li><a href="">Контакты</a></li>
+           <li class="nav-list"><a class="link header-link" href="index.html">Студия</a></li>
+           <li class="nav-list"><a class="link header-link" href="portfolio.html">Портфолио</a></li>
+           <li class="nav-list"><a class="link header-link" href="">Контакты</a></li>
        </ul>
     </nav>
-       <ul class="contacts list">
-           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+       <ul class="list header-contacts-list">
+           <li class="header-contacts-item"><a class="link header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+           <li class="header-contacts-item"><a class="link header-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
        </ul>
    </header>
    <main>
-    <!--Оглавление-->
+    <!----------------Герой------------>
+
   <section class="hero">
-      <h1 class="main-tittle">Эффективные решения для вашего бизнеса</h1>
-      <button type="button" class="button">Заказать услугу</button>
+      <h1 class="hero-tittle">Эффективные решения для вашего бизнеса</h1>
+      <button type="button" class="hero-button">Заказать услугу</button>
   </section>
-    <!--Описание особенностей-->
-  <section>
-      <h2 class="tittles">Наши преимущества</h2>
-      <ul class="list">
-          <li>
-              <h3 class="tittles" >Внимание к деталям</h3>
-              <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+    <!--------Описание особенностей----->
+
+  <section class="benefits">
+      <h2 class="benefits-tittle" >Наши преимущества</h2>
+      <ul class="list benefits-list">
+          <li class="benefits-item">
+              <h3 class="benefits-tittles" >Внимание к деталям</h3>
+              <p class="benefits-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-               <h3 class="tittles" >Пунктуальность</h3>
-               <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-          </li>
+               <h3 class="benefits-tittles" >Пунктуальность</h3>
+               <p class="benefits-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+          </li class="benefits-item">
           <li>
-                <h3 class="tittles" >Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-          </li>
+                <h3 class="benefits-tittles" >Планирование</h3>
+                <p class="benefits-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          </li class="benefits-item">
           <li>
-                <h3 class="tittles" >Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <h3 class="benefits-tittles" >Современные технологии</h3>
+                <p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
       </ul>
   </section>
-    <!--Примеры работ-->
-    <section>
-        <h2 class="tittles">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li> <img src="./images/picture1.jpg" alt="example of work" width="370"></li>
-          <li> <img src="./images/picture2.jpg" alt="example of work" width="370"></li>
-          <li> <img src="./images/picture3.jpg" alt="example of work" width="370"></li>
+    <!-----------Примеры работ----------->
+
+    <section class="exampels">
+        <h2 class="examples-tittle">Чем мы занимаемся</h2>
+        <ul class="list examples-list">
+          <li class="examles-item"> <img src="./images/picture1.jpg" alt="example of work" width="370"></li>
+          <li class="examles-item"> <img src="./images/picture2.jpg" alt="example of work" width="370"></li>
+          <li class="examles-item"> <img src="./images/picture3.jpg" alt="example of work" width="370"></li>
         </ul>
     </section>
-    <!--Фото команды-->
+    <!------------Фото команды----------->
+
     <section class="team">
-        <h2 class="tittles" >Наша команда</h2>
-        <ul class="list">
+        <h2 class="team-tittle" >Наша команда</h2>
+        <ul class="list team-list">
             <li class="team-photo">
                 <img src="./images/man1.jpg" alt="man on the photo" width="270">
-               <h3 class="tittles" >Игорь Демьяненко</h3>
-                <p> <span lang="en">Product Designer</span></p>
+               <h3 class="team-tittles" >Игорь Демьяненко</h3>
+                <p class="team-text"> <span lang="en">Product Designer</span></p>
             </li>
             <li class="team-photo">
                 <img src="./images/woman.jpg" alt="woman on the photo" width="270">
-                <h3 class="tittles" >Ольга Репина</h3>
-                <p> <span lang="en">Frontend Developer</span></p>
+                <h3 class="team-tittles" >Ольга Репина</h3>
+                <p class="team-text"> <span lang="en">Frontend Developer</span></p>
             </li>
             <li class="team-photo">
                 <img src="./images/man2.jpg" alt="man on the photo" width="270">
-                <h3 class="tittles" >Николай Тарасов</h3>
-                <p><span  lang="en">Marketing</span></p>
+                <h3 class="team-tittles" >Николай Тарасов</h3>
+                <p class="team-text"><span  lang="en">Marketing</span></p>
             </li>
             <li class="team-photo">
                 <img src="./images/man3.jpg" alt="man on the photo" width="270">
-                <h3 class="tittles" >Михаил Ермаков</h3>
-                <p> <span lang="en">UI Designer</span></p>
+                <h3 class="team-tittles" >Михаил Ермаков</h3>
+                <p class="team-text"> <span lang="en">UI Designer</span></p>
             </li>
         </ul>
     </section>
     </main>
-       <!--Футер-->
-    <footer class="footer-background">
-        <a href="/"> <span lang="en">WebStudio</span></a>
+       <!-----------Футер---------------->
+
+    <footer class="footer">
+        <a class="link footer-logo" href="/"> <span lang="en"> <span class="web">Web</span><span class="white-studio" >Studio</span></span></a>
         <address>
-        <ul class="list">
-          <li class="street"> <a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li class="contacts-footer"><a href="mailto:info@example.com">info@example.com</a></li>
-          <li class="contacts-footer"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <ul class="list footer-contacts-list">
+          <li class="footer-contacts-item"><a class="link footer-address-link" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li class="footer-contacts-item"><a class="link footer-contacts-link" href="mailto:info@example.com">info@example.com</a></li>
+          <li class="footer-contacts-item"><a class="link footer-contacts-link" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
         </address>
     </footer>
