--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="header-nav">
        <a class="link header-logo" href="/"><span lang="en"><span class="web">Web</span><span class="studio">Studio</span></span></a>
        <ul class="site-nav list" >
-           <li class="nav-list"><a class="link header-link" href="index.html">Студия</a></li>
+           <li class="nav-list"><a class="link header-link current" href="index.html">Студия</a></li>
            <li class="nav-list"><a class="link header-link" href="portfolio.html">Портфолио</a></li>
            <li class="nav-list"><a class="link header-link" href="">Контакты</a></li>
        </ul>
@@ -38,7 +38,7 @@
     <!--------Описание особенностей----->
 
   <section class="benefits">
-      <h2 class="benefits-tittle" >Наши преимущества</h2>
+      <h2 class="visually-hidden" >Наши преимущества</h2>
       <ul class="list benefits-list">
           <li class="benefits-item">
               <h3 class="benefits-tittles" >Внимание к деталям</h3>
