--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                         class="studio">Studio</span></span></a>
             <ul class="site-nav list">
                 <li class="nav-list"><a class="link header-link" href="index.html">Студия</a></li>
-                <li class="nav-list"><a class="link header-link" href="portfolio.html">Портфолио</a></li>
+                <li class="nav-list"><a class="link header-link current" href="portfolio.html">Портфолио</a></li>
                 <li class="nav-list"><a class="link header-link" href="">Контакты</a></li>
             </ul>
         </nav>
