--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
               <h3 class="benefits-tittles" >Внимание к деталям</h3>
               <p class="benefits-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
-          <li>
+          <li  class="benefits-item">
                <h3 class="benefits-tittles" >Пунктуальность</h3>
                <p class="benefits-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-          </li class="benefits-item">
-          <li>
+          </li>
+          <li class="benefits-item">
                 <h3 class="benefits-tittles" >Планирование</h3>
                 <p class="benefits-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-          </li class="benefits-item">
+          </li>
           <li>
                 <h3 class="benefits-tittles" >Современные технологии</h3>
                 <p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
@@ -96,7 +96,7 @@
         </ul>
     </section>
     </main>
-       <!-----------Футер---------------->
+       <!----------Футер---------------->
 
     <footer class="footer">
         <a class="link footer-logo" href="/"> <span lang="en"> <span class="web">Web</span><span class="white-studio" >Studio</span></span></a>
