--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,7 @@
     </header>
     <main>
         <section class="portfolio">
+            <h1 class="visually-hidden">Наши проекты</h1>
             <ul class="list portfolio-list">
                 <li><button type="button" class="button portfolio-btn">Все</button></li>
                 <li><button type="button" class="button portfolio-btn">Веб-сайты</button></li>
@@ -41,41 +42,41 @@
                 <li><button type="button" class="button portfolio-btn">Маркетинг</button></li>
             </ul>
             <ul class="list portfolio-list">
-                <li> <img src="./images/site.jpg" alt="Пример веб-сайта" width="370">
-                <h3 class="portfolio-tittles">Технокряк</h3>
-                <p class="portfolio-text">Веб-сайт</p>
+                <li><a class="link" href=""><img src="./images/site.jpg" alt="Пример веб-сайта" width="370">
+                <h2 class="portfolio-tittles">Технокряк</h2>
+                <p class="portfolio-text">Веб-сайт</p></a>
                 </li>
-                <li> <img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                <h3 class="portfolio-tittles">Постер New Orlean vs Golden Star</h3>
-                <p class="portfolio-text">Дизайн</p>
+                <li><a class="link" href=""><img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                <h2 class="portfolio-tittles">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-text">Дизайн</p></a>
                 </li>
-                <li> <img src="./images/restaurant.jpg" alt="Логотип ресторана Seafood" width="370">
-                <h3 class="portfolio-tittles">Ресторан Seafood</h3>
-                <p class="portfolio-text">Приложение</p>
+                <li><a class="link" href=""><img src="./images/restaurant.jpg" alt="Логотип ресторана Seafood" width="370">
+                <h2 class="portfolio-tittles">Ресторан Seafood</h2>
+                <p class="portfolio-text">Приложение</p></a>
                 </li>
-                <li> <img src="./images/headphones.jpg" alt="Наушники" width="370">
-                <h3 class="portfolio-tittles">Проект Prime</h3>
-                <p class="portfolio-text">Маркетинг</p>
+                <li><a class="link" href=""><img src="./images/headphones.jpg" alt="Наушники" width="370">
+                <h2 class="portfolio-tittles">Проект Prime</h2>
+                <p class="portfolio-text">Маркетинг</p></a>
                 </li>
-                <li> <img src="./images/boxes.jpg" alt="Две коробки" width="370">
-                <h3 class="portfolio-tittles">Проект Boxes</h3>
-                <p class="portfolio-text">Приложение</p>
+                <li><a class="link" href=""><img src="./images/boxes.jpg" alt="Две коробки" width="370">
+                <h2 class="portfolio-tittles">Проект Boxes</h2>
+                <p class="portfolio-text">Приложение</p></a>
                 </li>
-                <li> <img src="./images/monitor.jpg" alt="Монитор" width="370">
-                <h3 class="portfolio-tittles">Inspiration has no Borders</h3>
-                <p class="portfolio-text">Веб-сайт</p>
+                <li><a class="link" href=""><img src="./images/monitor.jpg" alt="Монитор" width="370">
+                <h2 class="portfolio-tittles">Inspiration has no Borders</h2>
+                <p class="portfolio-text">Веб-сайт</p></a>
                 </li>
-                <li> <img src="./images/magazine.jpg" alt="Журнал" width="370">
-                <h3 class="portfolio-tittles">Издание Limited Edition</h3>
-                <p class="portfolio-text">Дизайн</p>
+                <li><a class="link" href=""><img src="./images/magazine.jpg" alt="Журнал" width="370">
+                <h2 class="portfolio-tittles">Издание Limited Edition</h2>
+                <p class="portfolio-text">Дизайн</p></a>
                 </li>
-                <li> <img src="./images/label.jpg" alt="Бирка" width="370">
-                <h3 class="portfolio-tittles">Проект LAB</h3>
-                <p class="portfolio-text">Маркетинг</p>
+                <li><a class="link" href=""><img src="./images/label.jpg" alt="Бирка" width="370">
+                <h2 class="portfolio-tittles">Проект LAB</h2>
+                <p class="portfolio-text">Маркетинг</p></a>
                 </li>
-                <li> <img src="./images/computer.jpg" alt="Компьютер" width="370">
-                <h3 class="portfolio-tittles">Growing Business</h3>
-                <p class="portfolio-text">Приложение</p>
+                <li><a class="link" href=""><img src="./images/computer.jpg" alt="Компьютер" width="370">
+                <h2 class="portfolio-tittles">Growing Business</h2>
+                <p class="portfolio-text">Приложение</p></a>
                 </li>
             </ul>
         </section>
